# argux

./: .env.example  .gitignore  CHANGELOG.md  README.md  composer.json  credentials.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build.yml  ci.yml  envy_check.yml
app/Events/Auth/: LoginAttempted.php  PasswordResetRequested.php  RegistrationSubmitted.php  TwoFactorChallenged.php  UserAuthenticated.php  UserLoggedOut.php
app/Http/Middleware/: HandleInertiaRequests.php  PermissiveCSP.php  SetLocale.php
app/Providers/: AppServiceProvider.php
app/Support/Mock/: AuthMock.php
bootstrap/: app.php
config/: database.php  opensky.php
docker/: Makefile  README.md
docker/frankenphp/: Dockerfile  php.ini
docker/nginx/: default.conf
docker/nginx/conf.d/: default.conf
docker/postgres/init/: 01-extensions.sql
docker/server-1-app/: docker-compose.yml
docker/server-1-app/dockerfiles/: Dockerfile.laravel  Dockerfile.nginx  php-overrides.ini
docker/server-1-app/env/: .env.example
docker/server-2-dbmsg/: docker-compose.yml
docker/server-2-dbmsg/dockerfiles/: Dockerfile.kafka-connect
docker/server-2-dbmsg/env/: .env.example
docker/server-3-ai/: docker-compose.yml
docker/server-3-ai/dockerfiles/: Dockerfile.fastapi  requirements.txt
docker/server-3-ai/env/: .env.example
docker/server-4-storage/: docker-compose.yml
docker/server-4-storage/dockerfiles/: Dockerfile.restic
docker/server-4-storage/env/: .env.example
docker/server-5-ui/: docker-compose.yml
docker/server-5-ui/env/: .env.example
docker/shared/scripts/: db-backup.sh  deploy.sh  health-check.sh
docs/: API.md  ARCHITECTURE.md  AUTH.md  BUILD.md  CHANGELOG.md  DATABASE.md  DATASOURCES.md  DEPLOYMENT.md  DOCKER.md  ENVIRONMENT.md  GIT.md  INSTALLATION.md  QUEUE.md  RELEASE.md  TAURI-SETUP.md  docker.md  git.md
lang/: en.json  hr.json
public/: manifest.json  sw.js
resources/css/: app.css  base.css  components.css  layout.css  variables.css
resources/css/pages/: activity.css  admin-admins.css  admin-audit.css  admin-config.css  admin-dashboard.css  admin-kb.css  admin-roles.css  admin-statistics.css  admin-support.css  admin-users.css  alerts.css  auth.css  chat.css  connections.css  data-sources.css  devices.css  download.css  errors.css  (+21 more)
resources/js/: app.tsx
resources/views/: app.blade.php
routes/: admin-api.php  auth-api.php  user-api.php  web.php
scripts/: build.sh  setup.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
(+280 files in other folders)
