[package]
name = "argux"
version = "0.25.95"
description = "ARGUX — Tactical Intelligence & Surveillance Platform"
authors = ["ARGUX Team"]
edition = "2021"

[lib]
name = "argux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# === Core Plugins (all platforms) ===
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-websocket = "2"
tauri-plugin-upload = "2"
tauri-plugin-store = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-fs = "2"
tauri-plugin-biometric = "2"

# === Desktop-only Plugins ===
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-cli = "2"
#tauri-plugin-autostart = { version = "2", features = ["launch-agent"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
incremental = true
